improve override logic readability a bit